add plugin for build webXml

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.jsimone</groupId>
+            <artifactId>webapp-runner</artifactId>
+            <version>7.0.40.0</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
