--- a/pom.xml
+++ b/pom.xml
@@ -78,27 +78,27 @@
             <artifactId>json</artifactId>
             <version>20160810</version>
         </dependency>
+        <!--
+                &lt;!&ndash; https://mvnrepository.com/artifact/com.sun.jersey/jersey-bundle &ndash;&gt;
+                <dependency>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-bundle</artifactId>
+                    <version>1.19.2</version>
+                </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-bundle -->
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-bundle</artifactId>
-            <version>1.19.2</version>
-        </dependency>
+                &lt;!&ndash; https://mvnrepository.com/artifact/com.sun.jersey/jersey-server &ndash;&gt;
+                <dependency>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-server</artifactId>
+                    <version>1.19.2</version>
+                </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-server -->
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>1.19.2</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-core -->
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-core</artifactId>
-            <version>1.19.2</version>
-        </dependency>
+                &lt;!&ndash; https://mvnrepository.com/artifact/com.sun.jersey/jersey-core &ndash;&gt;
+                <dependency>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-core</artifactId>
+                    <version>1.19.2</version>
+                </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/javax.ejb/ejb-api -->
         <dependency>
@@ -143,6 +143,11 @@
             <version>2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>jsr311-api</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
