--- a/pom.xml
+++ b/pom.xml
@@ -66,13 +66,6 @@
             <version>3.3.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.json/json -->
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20160810</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/javax.ejb/ejb-api -->
         <dependency>
             <groupId>javax.ejb</groupId>
@@ -113,6 +106,12 @@
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet-core</artifactId>
+            <version>2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
             <version>2.17</version>
         </dependency>
 
